# SocketManager

./: .gitignore  CMakeLists.txt  Misc.cpp  Misc.h  README.md  SocketClient.cpp  SocketClient.h  SocketHelperClasses.cpp  SocketHelperClasses.h  SocketManager.cpp  SocketManager.h  main.cpp  socket_headers.h
